Bug 814967 - Fix includes in mailnews/ .idl files so that SeaMonkey builds no longer fail randomly, r=Standard8