mailnews/base/search/src/nsMsgFilterService.cpp
@@ -38,6 +38,7 @@
 #include "nsMsgMessageFlags.h"
 #include "nsIMsgWindow.h"
 #include "nsIMsgSearchCustomTerm.h"
+#include "nsIMsgSearchTerm.h"
 #include "nsAutoPtr.h"
 #include "nsIMsgFilter.h"
 
